force-app/main/default/objects/Program_Assignment__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>If the Program Engagement stage is Completed or Withdrawn, the End Date is set to TODAY() by the Process Builder process Template: Program Engagement Object. Clone the process template to edit it.</description>
    <inlineHelpText>If the Program Engagement Stage is Completed or Withdrawn, the End Date defaults to today if left blank.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>