force-app/main/default/objects/Program_Assignment__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Program Assignment</relationshipLabel>
    <relationshipName>Program_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>