force-app/main/default/objects/Program_Assignment__c/fields/Spent_Money__c.field-meta.xml
<CustomField>
    <fullName>Spent_Money__c</fullName>
    <label>Spent Money</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>