force-app/main/default/objects/Program_Assignment__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>A Contact&apos;s stage in a Program Engagement. Picklist values are determined by your Admin. Don&apos;t delete or modify the API Name of the Active And Enrolled picklist values as they are referenced in PMM reports.</description>
    <inlineHelpText>These Picklist values describe a Contact&apos;s stage of engagement in a Program and are displayed in a Path. Values are determined by your Admin.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Application Denied</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Referral Received</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
            <value>
                <fullName>Funding Approved</fullName>
            </value>
            <value>
                <fullName>Assigned to Staff</fullName>
            </value>
            <value>
                <fullName>Intake Scheduled and Billed</fullName>
            </value>
            <value>
                <fullName>Contacted Client and Scheduled Intake</fullName>
            </value>
            <value>
                <fullName>Completed Intake and Billed Initial</fullName>
            </value>
            <value>
                <fullName>Provide Services</fullName>
            </value>
            <value>
                <fullName>Complete Services (Bill Completion)</fullName>
            </value>
            <value>
                <fullName>Document Collection</fullName>
            </value>
            <value>
                <fullName>Entry into Virtual Gateway</fullName>
            </value>
            <value>
                <fullName>Services Provided</fullName>
            </value>
            <value>
                <fullName>General Eligibility Determined</fullName>
            </value>
            <value>
                <fullName>Evaluation Scheduled</fullName>
            </value>
            <value>
                <fullName>Evaluation Initiated</fullName>
            </value>
            <value>
                <fullName>Analyzing Data/Writing Report</fullName>
            </value>
            <value>
                <fullName>Evaluation Completed</fullName>
            </value>
            <value>
                <fullName>Assessment Sent to VR Counselor</fullName>
            </value>
            <value>
                <fullName>Referral Received by ESMA</fullName>
            </value>
            <value>
                <fullName>Contract in Process</fullName>
            </value>
            <value>
                <fullName>Intake Scheduled</fullName>
            </value>
            <value>
                <fullName>Complete Report</fullName>
            </value>
            <value>
                <fullName>Send Report to District</fullName>
            </value>
            <value>
                <fullName>Evaluation Performed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>